added vendors migrations
